apps/vaev/frontend/css/style.css
:root {
	--text-primary: #000000;
	--text-secondary: #999999;
	--background-primary: #ffffff;
	--background-secondary: #ebebeb;
	--background-accent: #efefef;

	--accent-color: #F05951;
	--accent-color-op: #F0595110;

	--accent-color-secondary: #51A4F0;
	--accent-color-tertiary: #D9E63C;

	--border-radius: 10px;
	--border-radius-small: 5px;

	--small-border: .5px solid var(--text-secondary);

	--color-fail: #a84c32;
	--color-success: #73a832;
	--color-warn: #a8a032;

	--font-family-headings: 'Lora', serif;
	--font-family-body: 'Open Sans', sans-serif;

	--base-font-size: 14px;
	--line-height-body: 1.6;
	--line-height-headings: 1.3;

	--letter-spacing-headings: 0.025em;
	--letter-spacing-body: 0.01em;

	--gap: 1rem;
	--gap-small: .5rem;
	--gap-1: .25rem;
	--gap-2: .5rem;
	--gap-3: .75rem;
	--gap-4: 1rem;
	--gap-5: 1.25rem;
	--gap-6: 1.50rem;
	--gap-7: 1.75rem;
	--gap-8: 2rem;

	--sidebar-width: 250px;

	--layer-1: 100;
	--layer-2: 200;
	--layer-3: 300;
	--layer-4: 400;
}

@media (prefers-color-scheme: dark) {
	:root {
		--text-primary: #ffffff;
		--text-secondary: #999999;
		--background-primary: #1e2024;
		--background-secondary: #2f3238;
		--background-accent: #4e535c;
	}
}

@font-face {
	font-family: "Material Symbols";
	font-style: normal;
	font-weight: 400;
	src: url("/MaterialSymbolsOutlined[FILL,GRAD,opsz,wght].ttf");
}

.material-symbols {
	font-family: "Material Symbols";
	font-weight: normal;
	font-style: normal;
	display: inline-block;
	line-height: 1;
	text-transform: none;
	letter-spacing: normal;
	word-wrap: normal;
	white-space: nowrap;
	direction: ltr;
	font-size: 1.5em;
	font-variation-settings: "GRAD" 100;
}

.fill {
	font-variation-settings: "FILL" 1;
}

@keyframes fill {
from {
	font-variation-settings: "FILL" 0;
}
to {
	font-variation-settings: "FILL" 1;
}
}


body {
	font-family: var(--font-family-body);
	font-size: var(--base-font-size);
	line-height: var(--line-height-body);
	letter-spacing: var(--letter-spacing-body);
	background-color: var(--background-primary);
	margin: 0;
	overflow: hidden;
	color: var(--text-primary);
}

button {
	cursor: pointer;
}

input,
select,
textarea {
	background-color: var(--background-primary);
	color: var(--text-primary);
	padding: .5rem;
	border-radius: var(--border-radius-small);
	border: var(--small-border);
	margin: 0;
	box-sizing: border-box;
}

input, label {
	display: block;
	width: 100%;
}

.text-red {
	color: var(--color-fail);
}

.btn {
	background-color: var(--background-accent);
	padding: .5rem;
	border-radius: var(--border-radius-small);
	border: var(--small-border);
	color: var(--text-primary);
}

.login-page {
	display: flex;
	justify-content: center;
	align-items: center;
	height: 100vh;
	color: var(--text-primary);
}

.login-page form {
	background-color: var(--background-secondary);
	border: var(--small-border);
	padding: var(--gap-6);
	border-radius: var(--border-radius-small);
	min-width: 400px;
	display: flex;
	flex-direction: column;
	gap: var(--gap-4);
}

.login-page form label {
	display: inline-block;
}

.toaster {
	position: fixed;
	bottom: 1rem;
	left: 1rem;
	right: 1rem;
	display: flex;
	flex-direction: column;
	gap: var(--gap);
	justify-content: flex-end;
}

.toaster__msg {
	opacity: 0;
	display: inline;
	align-self: flex-end;
	padding: 1rem;
	border-radius: var(--border-radius-small);
	animation: slide-up .2s cubic-bezier(0.645, 0.045, 0.355, 1) forwards;
}

.toaster__msg--error {
	background-color: var(--color-fail);
	color: var(--text-primary);
}

select {
	cursor: pointer;
}

.workspace {
	display: flex;
	align-items: center;
	gap: .5rem;
	background-color: var(--background-primary);
	width: 100vw;
	height: 100vh;
	box-sizing: border-box;
}

.canvas-container {
	position: relative;
	background-color: var(--background-primary);
	flex: 1;
	height: 100%;
	box-sizing: border-box;
}

.tooltips {
	padding: .5rem;
	border-radius: var(--border-radius);
	color: var(--text-secondary);
	background-color: var(--background-primary);
	font-size: 12px;
	display: flex;
	flex-direction: column;
	gap: 1rem;
}

.tooltips span {
	display: inline-block;
	padding: .125rem .25rem;
	line-height: 1;
	border-radius: var(--border-radius-small);
	color: var(--background-primary);
	border: 1px solid var(--text-secondary);
	background-color: var(--text-secondary);
}

.tooltips div {
	margin-right: .5rem;
}

.tooltips-btn {
	position: fixed;
	right: 1rem;
	bottom: 1rem;
	z-index: 101;
}

.tooltips-btn button {
	font-size: 1rem;
	color: var(--text-primary);
	background-color: var(--background-primary);
	border: 1px solid var(--text-secondary);
	padding: .5rem;
	width: 2rem;
	height: 2rem;
	display: flex;
	justify-content: center;
	align-items: center;
	border-radius: 1000px;
}

.control-panel {
	align-self: flex-start;
	background-color: var(--background-secondary);
	color: var(--text-primary);
	z-index: 100;
	min-width: var(--sidebar-width);
	display: flex;
	flex-direction: column;
	height: 100%;
	box-sizing: border-box;
	border-left: var(--small-border);
}

.control-panel__button-group button {
	height: var(--gap-8);
	width: var(--gap-8);
	display: flex;
	justify-content: center;
	align-items: center;
	padding: .5rem;
	background-color: var(--background-primary);
	color: var(--text-primary);
	transition: all .1s ease-in-out;
	border: 1px solid var(--text-secondary);
	border-radius: var(--border-radius-small);
}

.control-panel__button-group button span {
	font-size: 1.2rem;
}

.control-panel__button-group button:disabled {
	color: var(--text-secondary);
	background-color: var(--background-accent);
	cursor: default;
}

.control-panel__button-group button:hover {
	background-color: var(--background-accent);
}

.control-panel__section {
	padding: 1rem;
	border-bottom: var(--small-border);
}

.control-panel__section--footer {
	border-top: var(--small-border);
	margin-top: auto;
	border-bottom: none;
}

.control-panel__section p {
	margin: 0 0 .5rem 0;
}

.control-panel__button-group {
	display: flex;
	gap: .5rem;
}

.toolbar {
	position: absolute;
	top: 1rem;
	left: 1rem;
	display: flex;
	flex-direction: column;
	z-index: var(--layer-4);
}

.toolbar label:hover {
	background-color: var(--background-primary);
}

.toolbar label:first-child {
	border-top-left-radius: var(--border-radius-small);
	border-top-right-radius: var(--border-radius-small);
	border-bottom: none;
}
.toolbar label:last-child {
	border-bottom-left-radius: var(--border-radius-small);
	border-bottom-right-radius: var(--border-radius-small);
	border-top: none;
}

.toolbar label.active {
  background-color: var(--accent-color);
}

.toolbar input {
	position: absolute;
	opacity: 0;
	cursor: pointer;
}

.toolbar label {
	cursor: pointer;
	position: relative;
	box-sizing: border-box;
	background-color:var(--background-secondary);
	display: flex;
	justify-content: center;
	align-items: center;
	padding: var(--gap-3);
	font-size: .8rem;
	border: var(--small-border);
	color: var(--text-primary);
	transition: all .1s;
}

.node-draggable {
	padding: 1rem;
	display: flex;
	justify-content: center;
	align-items: center;
	border: 2px solid black;
	margin-bottom: .5rem;
	border-radius: 10px;
	cursor: grab;
}

.type-select {
	position: fixed;
	background-color: var(--background-secondary);
	border: var(--small-border);
	border-radius: var(--border-radius);
	padding: var(--gap-4);
	z-index: var(--layer-4);
	top: 50%;
	left: 50%;
}

dialog:focus {
	outline: 0;
}

dialog {
	border-radius: var(--border-radius-small);
	border: 1px solid var(--text-secondary);
	min-width: 250px;
	background-color: var(--background-primary);
	color: var(--text-primary);
}

dialog input, dialog select {
	padding: .5rem;
	border-radius: var(--border-radius-small);
	display: block;
	margin-bottom: .5rem;
	width: 100%;
	box-sizing: border-box;
}

dialog button {
	background-color: var(--accent-color);
	border: none;
	border-radius: var(--border-radius-small);
	padding: .5rem 1rem;
	color: var(--text-primary);
}

dialog .btn-container {
	display: flex;
	justify-content: flex-end;
}

.invisible-input {
	border: none;
}

.invisible-input:focus {
	outline: 0;
}

hr {
	border: none;
	height: 1px;
	background-color: var(--text-secondary);
}

.user-card {
	position: relative;
	display: flex;
	gap: var(--gap-2);
	align-items: center;
	width: 100%;
	background-color: transparent;
	padding: 0;
	color: var(--text-primary);
	border: none;
}

.user-card__avatar {
	border-radius: 100px;
	width: var(--gap-7);
	height: var(--gap-7);
	background-color: var(--accent-color);
	display: flex;
	justify-content: center;
	align-items: center;
	font-weight: bold;
	text-transform: uppercase;
}

.user-card__options {
	position: absolute;
	display: flex;
	flex-direction: column;
	top: calc(100% + var(--gap-2));
	right: 0;
	left: 0;
	background-color: var(--background-primary);
	box-sizing: border-box;
	border: var(--small-border);
	border-radius: var(--border-radius-small);
	text-align: left;
	animation: slide-down .2s cubic-bezier(0.645, 0.045, 0.355, 1) forwards;
}

.user-card__options button,
.user-card__options a {
	line-height: 1;
	display: inline-block;
	color: var(--text-primary);
	text-decoration: none;
	text-align: left;
	padding: var(--gap-3);
	background-color: transparent;
	border: none;
	border-bottom: var(--small-border);
	transition: all .1s ease-in-out;
	display: flex;
	gap: var(--gap-2);
	align-items: center;
}

.user-card__options .material-symbols-outlined {
	font-size: 1em;
}


.user-card__options button:hover,
.user-card__options a:hover {
	background-color: var(--background-secondary);
}

.user-card__options > *:first-child {
	border-top-left-radius: var(--border-radius-small);
	border-top-right-radius: var(--border-radius-small);
	border-top: none;
}
.user-card__options > *:last-child {
	border-bottom-left-radius: var(--border-radius-small);
	border-bottom-right-radius: var(--border-radius-small);
	border-bottom: none;
}

.user-card__opts-toggle {
	display: flex;
	justify-content: center;
	align-items: center;
	color: var(--text-primary);
	background-color: transparent;
	border: none;
	width: var(--gap-8);
	height: var(--gap-8);
	border-radius: var(--border-radius-small);
}
.user-card__opts-toggle:hover {
	background-color: var(--background-primary);
}

a.clickover:before {
	content: "";
	position: absolute;
	inset: 0;
	z-index: 1000;
}

@keyframes slide-up {
from {
	opacity: 0;
	transform: translateY(20px);
}
to {
	opacity: 1;
	transform: translateY(0px);
}
}

@keyframes slide-down {
from {
	opacity: 0;
	transform: translateY(-20px);
}
to {
	opacity: 1;
	transform: translateY(0px);
}
}

